--- a/index.html
+++ b/index.html
@@ -11,7 +11,30 @@
 <body>
     <div class="spacer"></div>
     <div class="spacer content">
+        <div class="calculator-holder">
 
+            <div class="calculator-input-holder">
+                <input type="text" class="calculator-input" spellcheck="false">
+            </div>
+
+            <div class="calculator-interface-holder"></div>
+
+
+            <button class="calculator-interface-button">1</button>
+            <button class="calculator-interface-button">2</button>
+            <button class="calculator-interface-button">3</button>
+            <button class="calculator-interface-button">4</button>
+            <button class="calculator-interface-button">5</button>
+            <button class="calculator-interface-button">6</button>
+            <button class="calculator-interface-button">7</button>
+            <button class="calculator-interface-button">8</button>
+            <button class="calculator-interface-button">9</button>
+            <button class="calculator-interface-button">0</button>
+            <button class="calculator-interface-button">*</button>
+            <button class="calculator-interface-button">/</button>
+
+
+        </div>
         
     </div>
     <div class="spacer"></div>    
