deleted unnessesary files, imported neumorphsim

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div class="spacer"></div>
     <div class="spacer content">
+        <h1 class="top-heading">Ugly Calculator</h1>
         <div class="calculator-holder">
 
             <div class="calculator-input-holder">
@@ -19,19 +20,6 @@
 
             <div class="calculator-interface-holder"></div>
 
-
-            <button class="calculator-interface-button">1</button>
-            <button class="calculator-interface-button">2</button>
-            <button class="calculator-interface-button">3</button>
-            <button class="calculator-interface-button">4</button>
-            <button class="calculator-interface-button">5</button>
-            <button class="calculator-interface-button">6</button>
-            <button class="calculator-interface-button">7</button>
-            <button class="calculator-interface-button">8</button>
-            <button class="calculator-interface-button">9</button>
-            <button class="calculator-interface-button">0</button>
-            <button class="calculator-interface-button">*</button>
-            <button class="calculator-interface-button">/</button>
 
 
         </div>
