changes on index.html and index.css

--- a/index.html
+++ b/index.html
@@ -11,14 +11,34 @@
 <body>
     <div class="spacer"></div>
     <div class="spacer content">
-        <h1 class="top-heading">Ugly Calculator</h1>
+        <h1 class="top-heading">Calculator</h1>
         <div class="calculator-holder">
 
             <div class="calculator-input-holder">
                 <input type="text" class="calculator-input" spellcheck="false">
             </div>
 
-            <div class="calculator-interface-holder"></div>
+            <div class="calculator-interface-holder">
+                <button class="calculator-interface-button"></button>
+                <button class="calculator-interface-button"></button>
+                <button class="calculator-interface-button"></button>
+                <button class="calculator-interface-button"></button>
+                <button class="calculator-interface-button"></button>
+                <button class="calculator-interface-button"></button>
+                <button class="calculator-interface-button"></button>
+                <button class="calculator-interface-button"></button>
+                <button class="calculator-interface-button"></button>
+
+                <button class="calculator-interface-button"></button>
+                <button class="calculator-interface-button"></button>
+                <button class="calculator-interface-button"></button>
+                <button class="calculator-interface-button"></button>
+                <button class="calculator-interface-button"></button>
+
+                <button class="calculator-interface-button"></button>
+
+
+            </div>
 
 
 
