completed calculator style chanes

--- a/index.html
+++ b/index.html
@@ -19,23 +19,26 @@
             </div>
 
             <div class="calculator-interface-holder">
-                <button class="calculator-interface-button"></button>
-                <button class="calculator-interface-button"></button>
-                <button class="calculator-interface-button"></button>
-                <button class="calculator-interface-button"></button>
-                <button class="calculator-interface-button"></button>
-                <button class="calculator-interface-button"></button>
-                <button class="calculator-interface-button"></button>
-                <button class="calculator-interface-button"></button>
-                <button class="calculator-interface-button"></button>
+                <button class="calculator-interface-button">1</button>
+                <button class="calculator-interface-button">2</button>
+                <button class="calculator-interface-button">3</button>
+                <button class="calculator-interface-button">4</button>
+                <button class="calculator-interface-button">5</button>
+                <button class="calculator-interface-button">6</button>
+                <button class="calculator-interface-button">7</button>
+                <button class="calculator-interface-button">8</button>
+                <button class="calculator-interface-button">9</button>
 
-                <button class="calculator-interface-button"></button>
-                <button class="calculator-interface-button"></button>
-                <button class="calculator-interface-button"></button>
-                <button class="calculator-interface-button"></button>
-                <button class="calculator-interface-button"></button>
+                <button class="calculator-interface-button">+</button>
+                <button class="calculator-interface-button">0</button>
+                <button class="calculator-interface-button">-</button>
+                <button class="calculator-interface-button">*</button>
+                <button class="calculator-interface-button">.</button>
 
-                <button class="calculator-interface-button"></button>
+                <button class="calculator-interface-button">÷</button>
+                <button class="calculator-interface-button">(</button>
+                <button class="calculator-interface-button">)</button>
+                <button class="calculator-interface-button">=</button>
 
 
             </div>
